# ai-ide

./: .gitignore  package-lock.json
.trae/documents/: 00_阶段总览.md  01_阶段1_基础Demo_编辑器ChatDiff预览_已完成.md  02_阶段2_工作区多文件与Key配置_已完成.md  03_阶段3_多文件上下文与AI生成文件_规划.md  04_阶段4_InlineEdit_选区改写与局部应用_规划.md  05_阶段5_AI补全_Completion与InlineSuggest_规划.md  06_阶段6_Godot适配_规划.md  90_参考_AI_IDE_技术方案规划.md  91_参考_AI_IDE_精简版_Demo_方案.md  桌面端_CCLI迁移规划.md
.trae/documents/桌面端_CCLI迁移规划_详细文档/: 00_总览.md  A_Rust后端扩展.md  B_CLI入口.md  C_功能增强.md  D_打包分发.md  _快速参考.md
.trae/skills/doc-generator/: SKILL.md
.trae/skills/project-manager/: SKILL.md
ai-ide-demo/: README.md  index.html  package-lock.json  package.json
ai-ide-demo/.github/workflows/: release.yml
ai-ide-demo/server/: proxy.js
ai-ide-demo/src/: App.tsx  index.css
ai-ide-demo/src-tauri/: Cargo.toml  tauri.conf.json
ai-ide-demo/src-tauri/capabilities/: default.json
ai-ide-demo/src-tauri/src/: cli.rs  cli_main.rs  features.rs  lib.rs
ai-ide-demo/src/completion/: types.ts
ai-ide-demo/src/components/: ChatPanel.tsx  DiffModal.tsx  Editor.tsx  FileTree.tsx  InlineDiffModal.tsx  InlineEditPromptModal.tsx  MonacoEditorComponent.tsx  MultiDiffModal.tsx  Preview.tsx  Resizer.tsx  SettingsModal.tsx  Toolbar.tsx  diffUtils.ts
ai-ide-demo/src/hooks/: useAI.ts
ai-ide-demo/src/inlineEdit/: deriveReplacement.ts  editorSelection.ts  monacoSelection.ts  types.ts
ai-ide-demo/src/lsp/: LSPManager.ts
ai-ide-demo/src/store/: aiStore.ts  workspaceStore.ts
