[package]
name = "app"
version = "0.1.0"
description = "AI IDE - Godot Assistant with CLI"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "ai-ide"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"
toml = "0.8"

[[bin]]
name = "ai-ide"
path = "src/main.rs"

[[bin]]
name = "ai-ide-cli"
path = "src/cli_main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
